--- a/src/components/listproductbycate/Productlist.css
+++ b/src/components/listproductbycate/Productlist.css
@@ -8,9 +8,9 @@
     width: 300px;
 }
 .productlist-productbackground{
-    margin-left: 3%;
     display: flex;
     flex-wrap: wrap;
+    width: 70%;
 }
 .price{
     font-size: 12px;
