--- a/src/common/authenticator/login/style.css
+++ b/src/common/authenticator/login/style.css
@@ -301,6 +301,11 @@ a{color:inherit;text-decoration:none}
 	font-size: 13px;
 	color: green;
 }
+.forgetps-title{
+	margin-left: 63%;
+    font-size: 12px;
+    color: red;
+}
 @media only screen and (max-width: 768px){
 	.login-page-background {
 		margin-top: 20px;
