--- a/src/components/Submenu/Submenu.css
+++ b/src/components/Submenu/Submenu.css
@@ -4,7 +4,7 @@
     display: block;
     list-style: none;
     box-shadow: rgb(43 52 69 / 20%) 0px 4px 16px;
-    height: 300px;
+    height: auto;
     width: 250px;
     border-radius: 5px;
     padding: 15px 0;
@@ -80,7 +80,7 @@
     top: -7px;
   }
   .navbar-submenu{
-    width: 500px;
+    width: 400px;
     margin-left: 5%;
   }
   @media only screen and (max-width: 768px){
@@ -94,7 +94,7 @@
       display: block;
       list-style: none;
       box-shadow: rgb(43 52 69 / 20%) 0px 4px 16px;
-      height: 300px;
+      height: auto;
       width: 70px;
       border-radius: 5px;
       padding: 15px 0;
