--- a/src/common/authenticator/account/account.css
+++ b/src/common/authenticator/account/account.css
@@ -209,6 +209,11 @@
     color: green;
     margin-left: 59%;
 }
+.error-warning-cwt{
+    margin-left: 3%;
+    font-size: 12px;
+    color: red;
+}
 @media only screen and (max-width: 768px){
     .profile {
         display: flex;
