--- a/src/common/authenticator/account/account.css
+++ b/src/common/authenticator/account/account.css
@@ -214,6 +214,12 @@
     font-size: 12px;
     color: red;
 }
+.successsend-message{
+    margin-left: 3%;
+    width: 25%;
+	font-size: 12px;
+	color: green;
+}
 @media only screen and (max-width: 768px){
     .profile {
         display: flex;
