--- a/src/components/productdetail/productdetail.css
+++ b/src/components/productdetail/productdetail.css
@@ -51,4 +51,10 @@
     font-size: 13px;
     white-space: pre;
 }
+.detail-page span{
+    font-size: 13px;
+}
+.detail-page p{
+    font-size: 13px;
+}
 
