--- a/src/components/discount/discountstyle.css
+++ b/src/components/discount/discountstyle.css
@@ -3,22 +3,19 @@
   height: 40px;
   margin-top: 5px;
 }
-.NewArrivals h4 {
+.Discount h4 {
   font-weight: 400;
 }
-.NewArrivals1 span {
-  color: blueviolet;
-  font-size: 15px;
-  font-weight: 500;
+.Discount span {
+  font-size: 14px;
 }
-.NewArrivals .box img {
-  width: 100%;
-  height: 100%;
-  margin-left: auto;
+.Discount .box img {
+  width: 120px;
+  height: 110px;
+  display: initial;
 }
 .box .img-cover-na{
-  height: 110px;
-  width: 80%;
+  text-align: center;
 }
 .box .N-price ,.box .D-price{
   color: #c10017;
@@ -33,6 +30,22 @@
   margin-top: 5px;
   font-size: 12px;
 }
+.button-naa{
+    background: none;
+    color: #6495ED;
+    font-size: 20px;
+    transition: 0.5s;
+    border: 1px solid rgb(3 0 71 / 9%);
+    width: 25px;
+    height: 25px;
+    border-radius: 5px;
+    margin-left: 65%;
+}
+.button-naa:hover{
+  cursor: pointer;
+  background-color: #6495ED;
+  color: #fff;
+}
 @media only screen and (max-width: 768px){
   content .grid.product .box{
     width: 68px;
@@ -42,7 +55,7 @@
     height: 70px;
     width: 20px;
   }
-  .NewArrivals .box img{
+  .Discount .box img{
     display: initial;
     height: 70px;
     width: 20px;
