--- a/src/components/newarrivals/style.css
+++ b/src/components/newarrivals/style.css
@@ -10,13 +10,14 @@
   font-size: 14px;
 }
 .NewArrivals .box img {
-  width: 100%;
-  height: 100%;
-  margin-left: auto;
+  width: 120px;
+  height: 110px;
+  display: initial;
 }
 .box .img-cover-na{
   height: 110px;
-  width: 80%;
+  width: 100%;
+  align-items: center;
 }
 .box .N-price ,.box .D-price{
   color: #c10017;
